# hashLib

./: CMakeLists.txt  README.md  main.cpp
hashFunctions/: CMakeLists.txt  djb2Hash.cpp  djb2Hash.hpp  hashBase.hpp  stdHash.cpp  stdHash.hpp
hashTests/: CMakeLists.txt  avalancheTest.cpp  avalancheTest.hpp  bitIndependenceTest.cpp  bitIndependenceTest.hpp  distributionTest.cpp  distributionTest.hpp  hashTestBase.hpp  speedTest.cpp  speedTest.hpp
